Fix compilation warnings